design transformed into components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,19 @@
 /* MIXIN **************************************************************************** */
 
 @import "mixin";
+
+/* DRUMMACHINE ********************************************************************** */
+
+@import "./../components/DrumMachine";
+
+/* DISPLAYPANEL ********************************************************************* */
+
+@import "./../components/DisplayPanel";
+
+/* CONTROLPANEL ********************************************************************* */
+
+@import "./../components/ControlPanel";
+
+/* BUTTONPAD ************************************************************************ */
+
+@import "./../components/ButtonPad";
