--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,9 +14,18 @@ $basic: 'PT Sans', sans-serif;
 
 /* Theme - colors */
 
-$orange: rgb(189, 115, 68);
-$red: rgb(168, 41, 60);
-$purple: rgb(88, 46, 68);
-$olive: rgb(142, 122, 61);
-$yellow: rgb(215, 185, 87);
-$black: rgba(26, 36, 45, 0.9);
+$dark-gray: rgb(58, 58, 58);
+$light-gray: rgb(212, 212, 212);
+$gray: rgb(124, 124, 124);
+
+$black: rgb(0, 0, 0);
+$red: rgb(156, 49, 31);
+$white: rgb(239, 239, 237);
+
+$greenish: rgb(53, 203, 104);
+$green: rgb(52, 203, 0);
+$yellowish: rgb(193, 250, 23);
+$yellow: rgb(254, 255, 0);
+$orange: rgb(254, 153, 1);
+$dark-red: rgb(207, 51, 2);
+$light-red: rgb(254, 0, 0);
