'on and off' functionality added

--- a/src/components/DisplayPanel.scss
+++ b/src/components/DisplayPanel.scss
@@ -13,7 +13,7 @@
 .power-button {
   width: 120px;
   height: 40px;
-  background-image: linear-gradient($dark-red, $red);
+  background-image: linear-gradient($dark-red, $dark-red);
   border: solid 2px $black;
   border-radius: 10px;
   position: relative;
@@ -24,7 +24,6 @@
 
   &:hover, &:focus {
     cursor: pointer;
-    background-image: linear-gradient($dark-red, $dark-red);
   }
 
   &:active {
@@ -45,4 +44,8 @@
   background-color: $black;
   border-radius: 10px;
   margin-top: 10px;
+}
+
+.isOn {
+  background-image: linear-gradient($dark-red, $red);
 }
