--- a/src/components/ButtonPad.scss
+++ b/src/components/ButtonPad.scss
@@ -19,6 +19,11 @@
     box-shadow: 0 2px 0 0 $black;
   }
 
+  &:disabled {
+    cursor: not-allowed;
+    background-color: $gray;
+  }
+
   &:before {
     content: " ";
     position: absolute;
