--- a/src/components/DisplayPanel.scss
+++ b/src/components/DisplayPanel.scss
@@ -1,6 +1,6 @@
 .display_panel {
   width: 450px;
-  height: 140px;
+  height: 150px;
   background-color: $dark-gray;
   border: solid $black 2px;
   border-radius: 10px;
@@ -40,17 +40,22 @@
 
 .display {
   width: 100%;
-  height: 90px;
+  height: 100px;
   background-color: $black;
   border-radius: 10px;
   margin-top: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .isOn {
   background-image: linear-gradient($dark-red, $red);
+}
+
+.display__sound-graph {
+
 }
 
 .display__sound-name {
